--- a/www/scss/_intro.scss
+++ b/www/scss/_intro.scss
@@ -119,16 +119,17 @@ INTRO
 
 		&::before {
 			content: '';
-			width: 50vw;
+			width: 50%;
 			height: 696px;
 			position: absolute;
-			right: 0;
+			right: 8px;
 			top: -115px;
 			z-index: -1;
+			background-color: #64a83b;
 			background-image: url(../img/index-background-desktop@1x.jpg);
 			background-repeat: no-repeat;
 			background-position: right top;
-			background-size: 100%;
+			background-size: 727px 696px;
 			transform: translateX(8px);
 		}
 		
@@ -137,7 +138,7 @@ INTRO
 	.intro__wrapper {
 		flex-wrap: wrap;
 		height: 500px;
-		width: 1220px;
+		width: 1140px;
 		padding-top: 0;
 		transform: translateX(80px);
 	}
